# eggs-machina

./: pyproject.toml
eggs_machina/data/: data_collected.py  data_utils.py
eggs_machina/hw_drivers/system/robstride/: constants.py
eggs_machina/scripts/: end_effector_trigger.py  record_episode.py  teleop.py  teleop_data_collection.py
eggs_machina/utils/: data_collection_teleop.py  robstride_robot.py  teleop.py
