[tool.poetry]
name = "eggs-machina"
version = "0.1.0"
description = ""
authors = ["Alan Bohannon <alanbohannon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
h5py = "^3.11.0"
python-can = "^4.4.2"
dm-env = "^1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
]